--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       rel="stylesheet"
       href="https://cdn.rawgit.com/michalsnik/aos/2.0.1/dist/aos.css"
     />
-    <title>Fajar Profile</title>
+    <title>MuhammadFajarAlmadani.web</title>
   </head>
 
   <body>
@@ -85,7 +85,7 @@
                 <a class="nav-link" href="#Sweetheart">Sweetheart</a>
               </li>
               <li>
-                <a class="nav-link" href="#Projects">Projects</a>
+                <a class="nav-link" href="#Jasa Joki">Jasa Joki</a>
               </li>
               <li>
                 <a class="nav-link" href="#Certifications">Certifications</a>
@@ -109,7 +109,7 @@
         <a class="nav-link" href="#Sweetheart">Sweetheart</a>
       </li>
       <li class="nav-item-item">
-        <a class="nav-link" href="#Projects">Projects</a>
+        <a class="nav-link" href="#Jasa Joki">Jasa Joki</a>
       </li>
       <li class="nav-item-item">
         <a class="nav-link" href="#Certifications">Certifications</a>
@@ -380,7 +380,7 @@
         id="Sweetheart"
         class="achive fw-bold"
       >
-      ❤ SWEETHEART ❤
+      MY PROJECTS
       </h2>
       <div class="container mx-auto">
         <div class="row">
@@ -391,11 +391,11 @@
               class="card text-dark mb-3 mx-auto"
               style="max-width: 18rem"
             >
-              <div class="card-header">Picture 1</div>
+              <div class="card-header">Project java</div>
               <div class="card-body">
-                <img src="img/krb.jpg" height="150px" width="200px">
+                <img src="assets/img/JAVA.png" height ="150px" width="200px">
                 <p class="card-text">
-                  ..................
+                 Bahasa Pemrograman Java adalah bahasa pemrograman yang paling populer di dunia. java ini lebih sering digunakan para progammer dengaan membuat suatu aplikasi android.
                 </p>
               </div>
             </div>
@@ -407,11 +407,11 @@
               class="card text-dark mb-3 mx-auto"
               style="max-width: 18rem"
             >
-              <div class="card-header">Picture 2</div>
+              <div class="card-header">Ardunio</div>
               <div class="card-body">
-                <img src="img/krb.jpg" height="150px" width="200px">
+                <img src="assets/img/ARDUINO.jpg" height="150px" width="200px">
                 <p class="card-text">
-                  ...................
+                  Ardunio adalah sebuah platform yang digunakan untuk membuat aplikasi yang dapat berinteraksi dengan dunia nyata.
                 </p>
               </div>
             </div>
@@ -423,11 +423,11 @@
               class="card text-dark mb-3 mx-auto"
               style="max-width: 18rem"
             >
-              <div class="card-header">Picture 3</div>
+              <div class="card-header"> HTML & CSS </div>
               <div class="card-body">
-                <img src="img/krb.jpg" height="150px" width="200px">
+                <img src="assets/img/HTMLCSS.jpg" height="150px" width="200px">
                 <p class="card-text">
-                  ...................
+                  HTML & CSS adalah bahasa pemrograman yang digunakan untuk membuat aplikasi web.
                 </p>
               </div>
             </div>
@@ -439,11 +439,11 @@
               class="card text-dark mb-3 mx-auto"
               style="max-width: 18rem"
             >
-              <div class="card-header">Picture 4</div>
+              <div class="card-header">UI/UX DESIGNER</div>
               <div class="card-body">
-                <img src="img/krb.jpg" height="150px" width="200px">
+                <img src="assets/img/UI_UX.png" height="150px" width="200px">
                 <p class="card-text">
-                  ...................
+                  UI/UX Designer juga perlu memiliki kemampuan dalam desain grafis menggunakan alat-alat seperti Adobe Photoshop, Illustrator, atau Figma. Menguasai perangkat lunak desain grafis memungkinkan mereka untuk membuat elemen-elemen visual, ikon, dan layout dengan presisi dan kreativitas. Ini diperlukan untuk menciptakan desain antarmuka yang menarik dan kohesif, serta memastikan konsistensi visual di seluruh produk.
                 </p>
               </div>
             </div>
@@ -467,10 +467,10 @@
       <h2
         data-aos="fade-up"
         data-aos-duration="800"
-        id="Projects"
+        id="Jasa Joki"
         class="projects fw-bold"
       >
-        PROJECTS
+        CLICK TO IMAGE!
       </h2>
       <div class="categoryy">
         <div class="container">
@@ -551,13 +551,13 @@
                 </a>
               </div>
             </div>
-          </div> -->
+          </div> --> 
         </div>
       </div>
     </div>
     <svg
       class="botWaves"
-      xmlns="http://www.w3.org/2000/svg"
+      xmlns="http://www.w3.org/2000/svg" 
       viewBox="0 0 1440 320"
     >
       <path
