--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <a class="nav-link" href="#Biodata">Biodata</a>
               </li>
               <li>
-                <a class="nav-link" href="#Sweetheart">Sweetheart</a>
+                <a class="nav-link" href="#Project">Project</a>
               </li>
               <li>
                 <a class="nav-link" href="#Jasa Joki">Jasa Joki</a>
@@ -106,7 +106,7 @@
         <a class="nav-link" href="#Biodata">Biodata</a>
       </li>
       <li class="nav-item-item">
-        <a class="nav-link" href="#Sweetheart">Sweetheart</a>
+        <a class="nav-link" href="#Project">Project</a>
       </li>
       <li class="nav-item-item">
         <a class="nav-link" href="#Jasa Joki">Jasa Joki</a>
@@ -377,10 +377,10 @@
       <h2
         data-aos="fade-up"
         data-aos-duration="800"
-        id="Sweetheart"
+        id="Project"
         class="achive fw-bold"
       >
-      MY PROJECTS
+      MY PROJECT
       </h2>
       <div class="container mx-auto">
         <div class="row">
