--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       />
       <div class="nama">
         <h4 class="text-center fw-bold">Muhammad Fajar Almadani</h4>
-        <h5 class="text-center">UI/UX Designer</h5>
+        <h5 class="text-center">JAVA DEVELOPER</h5>
       </div>
 
       <svg
